--- a/.env
+++ b/.env
@@ -22,11 +22,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=bitstar.hayashi.shohei＠gmail.com
+MAIL_PASSWORD=Temixtemix1
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=s-hayashi@bitstar.jp
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
