Gmail経由でメール送信できるように修正

--- a/.env
+++ b/.env
@@ -24,10 +24,12 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=bitstar.hayashi.shohei＠gmail.com
-MAIL_PASSWORD=Temixtemix1
+MAIL_FROM_NAME=Laravel
+MAIL_USERNAME=bitstarhayashi@gmail.com
+MAIL_FROM_ADDRESS=bitstarhayashi@gmail.com
+MAIL_PASSWORD=uxvcesqjmuyhbhaa
+MAIL_PRETEND=false
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=s-hayashi@bitstar.jp
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
