--- a/.env
+++ b/.env
@@ -3,14 +3,15 @@ APP_ENV=local
 APP_KEY=base64:AVLpXus/MeJ1dXf52QancrpR1QPjX6fhF+U39aa+irk=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+#APP_URL=http://localhost
+APP_URL=http://192.168.120.146:8000/login
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=gamo
-DB_PASSWORD=gamo
+DB_DATABASE=gamo
+DB_USERNAME=laravel
+DB_PASSWORD=laravel
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
